--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@ layout: default
 title: Hank Quinlan, Horrible Cop
 ---
 <div class="blurb">
-	<h1>Hi there, I'm Hank Quinlan!</h1>
-	<p>I'm best known as the horrible cop from <em>A Touch of Evil</em> Don't trust me. <a href="/about">Read more about my life...</a></p>
+	<h1>Hi there, I'm Zhane Bennett!</h1>
+	<p>I live in upstate NY <em>I'm making a website</em> Work with me. <a href="/about">Read more about my life...</a></p>
 </div><!-- /.blurb -->
 
