--- a/about/index.html
+++ b/about/index.html
@@ -1,13 +1,16 @@
 
-
 ---
 layout: default
-title: Zhane Bennett's Blog
+title: About Zhane Bennett
 ---
-	<h1>{{ page.title }}</h1>
-	<ul class="posts">
 
-	  {% for post in site.posts %}
-	    <li><span>{{ post.date | date_to_string }}</span> » <a href="{{ post.url }}" title="{{ post.title }}">{{ post.title }}</a></li>
-	  {% endfor %}
-	</ul>
+		<div class="about">
+			<h1>About</h1>
+			<p>Brief bio.</p>
+
+			<ul class="contacts">
+				<li><a href="#">@TwitterHandle</a></li>
+				<li><a href="#">My Departmental Webpage</a></li>
+				<li><a href="#">Another site</a></li>
+				</ul>
+		</div>
