--- a/about.html
+++ b/about.html
@@ -5,6 +5,8 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>Aspiring Data Scientist with an analytical and creative mind, enrolled in a 5-month Data Science Immersive program with the goal of focusing my talents in economics and sociology towards data science. I'm particularly interested in Business Analytics/Strategy, Machine Learning, and Natural Language Processing.</p>
+<p>I'm an aspiring Data Scientist with an analytical and creative mind, enrolled in a 5-month Data Science Immersive program with the goal of focusing my talents in economics and sociology towards data science. I'm particularly interested in Business Analytics/Strategy, Machine Learning, and Natural Language Processing.</p>
 
-<p class="mb-5">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Totam inventore aspernatur repellendus incidunt adipisci modi voluptates recusandae iste eligendi, repudiandae corporis quod aut, optio! Explicabo quaerat unde voluptatem! Itaque, eum!</p>
+<!--
+<p class="mb-5"> I also love photography and travel! </p>
+-->
