--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,8 @@ form: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form name="sentMessage" id="contactForm">
+<form action="https://formspree.io/zhanebennett@gmail.com" method="POST" />
+<form name="sentMessage" id="contactForm" novalidate>
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
