--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,11 @@ form: true
 ---
 
 <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
-<form action="https://formspree.io/zhanebennett@gmail.com" method="POST" name="sentMessage" id="contactForm" >
 <!-- <form name="sentMessage" id="contactForm" novalidate> -->
   <div class="control-group">
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
+      <form action="https://formspree.io/zhanebennett@gmail.com" method="POST">
       <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
       <p class="help-block text-danger"></p>
     </div>
