--- a/contact.html
+++ b/contact.html
@@ -5,11 +5,10 @@ description: Have questions? I have answers.
 background: '/img/bg-contact.jpg'
 form: true
 ---
-
-<p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
+<form action="https://formspree.io/zhanebennett@gmail.com" method="POST">
+  <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <!-- <form name="sentMessage" id="contactForm" novalidate> -->
   <div class="control-group">
-  <form action="https://formspree.io/zhanebennett@gmail.com" method="POST" novalidate>
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
       <input type="text" class="form-control" placeholder="Name" id="name" required data-validation-required-message="Please enter your name.">
