--- a/contact.html
+++ b/contact.html
@@ -5,7 +5,7 @@ description: Have questions? I have answers.
 background: '/img/bg-contact.jpg'
 form: true
 ---
-<form action="https://formspree.io/zhanebennett@gmail.com" method="Post" />
+<form action="https://formspree.io/zhanebennett@gmail.com" method="Post" >
   <p>Want to get in touch? Fill out the form below to send me a message and I will get back to you as soon as possible!</p>
 <!-- <form name="sentMessage" id="contactForm" novalidate> -->
   <div class="control-group">
