--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@ form: true
     <div class="form-group floating-label-form-group controls">
       <label>Name</label>
       <input type="text" class="form-control" placeholder="Name" name="name" required data-validation-required-message="Please enter your name.">
-      <p class="help-block text-danger"></p>
+<!--  <p class="help-block text-danger"></p> -->
     </div>
   </div>
   <div class="control-group">
