--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@ description: This is what I do.
 background: '/img/bg-about.jpg'
 ---
 
-<p>I'm an aspiring Data Scientist with an analytical and creative mind, enrolled in a 5-month Data Science Immersive program with the goal of focusing my talents in economics and sociology towards data science. I'm particularly interested in Business Analytics/Strategy, Machine Learning, and Natural Language Processing.</p>
+<p>I'm an aspiring Data Scientist with an analytical and creative mind, enrolled in a Data Science Immersive program with the goal of focusing my talents in economics and sociology towards data science. I'm particularly interested in Business Analytics/Strategy, Machine Learning, and Natural Language Processing.</p>
 
 <!--
 <p class="mb-5"> I also love photography and travel! </p>
